# dcore

./: .gitignore  AUTHORS  COPYING  README.md  dub.sdl  meson.build  test.deesh
src/: cut.d  deesh.d  echo.d  mkdir.d  return.d  seq.d  sleep.d  sync.d  tee.d  tsort.d  tty.d  wc.d  yes.d
src/basename/: basename.d
src/cksum/: cksum.d
src/dirname/: dirname.d
src/factor/: factor.d
src/hostid/: hostid.d
src/pwd/: pwd.d
src/shadow/: shadow.d
src/su/: su.d
src/uname/: uname.d
src/unlink/: unlink.d
