project('dcore', 'd')
executable('mkdir', 'src/mkdir.d')
executable('yes', 'src/yes.d')
executable('tee', 'src/tee.d')
executable('tty', 'src/tty.d')
executable('echo', 'src/echo.d')
executable('uname', 'src/uname.d')
# Somehow we should link this to true and false on install.
executable('return', 'src/return.d')
