project('dcore', 'd')
# WIP
executable('deesh', 'src/deesh/deesh.d')
executable('mkdir', 'src/mkdir/mkdir.d')
executable('cksum', 'src/cksum/cksum.d')
executable('wc', 'src/wc/wc.d')

# Done(-ish)
executable('yes', 'src/yes/yes.d')
executable('tee', 'src/tee/tee.d')
executable('tty', 'src/tty/tty.d')
executable('echo', 'src/echo/echo.d')
executable('uname', 'src/uname/uname.d')
# Somehow we should link this to true and false on install.
executable('return', 'src/return/return.d')
executable('hostid', 'src/hostid/hostid.d')
executable('unlink', 'src/unlink/unlink.d')
executable('sync', 'src/sync/sync.d')
executable('basename', 'src/basename/basename.d')
executable('dirname', 'src/dirname/dirname.d')
executable('tsort', 'src/tsort/tsort.d')
executable('cut', 'src/cut/cut.d')
executable('seq', 'src/seq/seq.d')
executable('sleep', 'src/sleep/sleep.d')
